fix: scroll builder and overflow hidden ROOT

--- a/display/styles/custom-setting.scss
+++ b/display/styles/custom-setting.scss
@@ -2,6 +2,7 @@
   // app container in client
   [id^=ROOT]{
     min-width: 200px !important;
+    overflow: hidden;
   }
 
   .custom {
